UPDATE: result card date wrap fix

--- a/src/App.css
+++ b/src/App.css
@@ -157,12 +157,14 @@ h1.heading {
 }
 .result .info {
   margin-left: 10%;
+  width: 100%;
 }
 a {
   text-decoration: none;
   color: black;
 }
 .source-date-container{
+  width: 100%;
   display: flex;
   justify-content: flex-start;
   margin-top: 2%;
